# microservices-python

./: .env.example  .gitignore  README.md  cleanup.sh  deploy.sh  docker-compose.yaml  example.env
converter-service/: Dockerfile  README.md  requirements.txt
converter-service/app/: __init__.py  config.py  converter.py  publisher.py  subscriber.py
gateway/: Dockerfile  README.md  requirements.txt  run.py
gateway/app/: main.py
gateway/app/api/: __init__.py  deps.py  publisher.py
gateway/app/core/: config.py
gateway/app/schemas/: auth.py
helm/py-micro/: Chart.yaml  README.md  values.yaml
helm/py-micro/templates/: converter.yaml  gateway.yaml  ingress.yaml  postgres.yaml  (+4 more)
k8s/: converter.yaml  mongo.yaml  notification.yaml  postgres.yaml  rabbitmq.yaml  users-deployment.yaml
kubernetes/: converter.yaml  gateway.yaml  mongo.yaml  mysql.yaml  namespace.yaml  notification.yaml  postgres.yaml  rabbitmq.yaml  users-deployment.yaml  users-job.yaml
notification-service/: .gitignore  Dockerfile  README.md  requirements.txt  run.py
notification-service/app/: __init__.py  config.py  demo.html  mailer.py  subscriber.py
scripts/: deploy-helm.sh  deploy-k8s.sh  kind-cluster-config.yaml  setup-cluster.sh
users-service/: .dockerignore  .env.example  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  uv.Dockerfile  uv.pyproject.toml
users-service/alembic/: env.py
users-service/alembic/versions/: 4cce3446c8c7_update_usermodel.py  a062dd3d0f96_usermodel.py
users-service/app/: main.py  utils.py
users-service/app/api/: __init__.py  deps.py
users-service/app/api/endpoints/: auth.py  users.py
users-service/app/config/: __init__.py  settings.py
users-service/app/core/: config.py  dependencies.py  exceptions.py  security.py  settings.py
users-service/app/db/: __init__.py  base.py  database.py
users-service/app/models/: user.py
users-service/app/routes/: __init__.py  auth.py  users.py
users-service/app/schemas/: __init__.py  auth.py  user.py
users-service/migrations/: env.py
users-service/migrations/versions/: 8696521af719_user.py
(+3 files in other folders)
