[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["Muhammad Nahid <mdnahid22@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlmodel = "^0.0.24"
psycopg2 = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.7"}
alembic = "^1.16.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
gunicorn = "^23.0.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
